Images compressed. Some icons changes. Authors list now in alphabetic order

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pedror01.github.io/Artimanias2024",
+  "homepage": "./",
   "name": "artimanias_2024",
   "version": "0.1.0",
   "private": true,
