--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Arti2024",
+  "name": "Artimañas 2024",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "logo_arti.svg",
+      "type": "image/svg",
+      "sizes": "64x64 32x32 24x24 16x16"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "logo_arti192.svg",
+      "type": "image/svg",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "logo_arti512.svg",
+      "type": "image/svg",
       "sizes": "512x512"
     }
   ],
+  "description":"Presentación de trabajos finales de Taller de Producción Final, Multimedia FDA-UNLP",
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#F85031",
+  "background_color": "#1778F3"
 }
